unpackaged/main/default/objects/Lead_Offer__c/Lead_Offer__c.object-meta.xml
<CustomObject>
    <label>Lead Offer</label>
    <nameField>
        <label>Lead Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>