unpackaged/main/default/objects/Lead_Offer__c/fields/Above_Prime_Max__c.field-meta.xml
<CustomField>
    <fullName>Above_Prime_Max__c</fullName>
    <label>Above Prime Max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>