unpackaged/main/default/objects/Lead_Offer__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Lead_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>