unpackaged/main/default/objects/Lead_Offer__c/fields/Origination_Fee_Rate_Discount__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee_Rate_Discount__c</fullName>
    <label>Origination Fee Rate Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>