unpackaged/main/default/objects/Lead_Offer__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>