unpackaged/main/default/objects/Lead_Offer__c/fields/Selected_Offer__c.field-meta.xml
<CustomField>
    <fullName>Selected_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected Offer</label>
    <type>Checkbox</type>
</CustomField>